# cpu_simulator

./: .dockerignore  .gitignore  Dockerfile  Makefile  main.py  plan.md  pyproject.toml  readme.md
.github/workflows/: docker-build.yml  python-tests.yml
cpu/: cache.py  cpu.py  memory_bus.py
files/: extended_data.txt  extended_program.txt  faulty_opcode.txt  faulty_opcode_data.txt  instruction_input.txt  valid_arithmetic.txt  valid_arithmetic_data.txt  valid_branching.txt  valid_branching_data.txt
tests/integration/: test_cpu.py
tests/unit/: test_cache.py  test_cpu_execution.py  test_cpu_utils.py  test_memory_bus.py
utils/: constants.py
