# pyproject.toml

[project]
name = "cpu_simulator"
version = "1.2.1"
description = "A Python-based simulator for a simplified MIPS-inspired CPU architecture with memory bus and cache."
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
]

[tool.pytest.ini_options]
# Ensures tests can import modules without setting PYTHONPATH manually
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["cpu", "utils"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
